Fix bug where highlights were wrong color in dark mode in menus

--- a/src/components/layout/nav/content/Menu/SubMenu/submenu.module.scss
+++ b/src/components/layout/nav/content/Menu/SubMenu/submenu.module.scss
@@ -14,5 +14,8 @@
             width: 17px;
             margin-left: 10px;
         }
+        > section > div:hover {
+            color: blue !important;
+        }
     }
 }
